# tf2-finops-docs

./: .gitignore  AGENTS.md  FINOPS_CDO_MASTER_SUMMARY.md  verify_docs.py
CR_docs/: eks_to_ecs_doc1.md  finops_architecture_doc2.md  finops_deployment_doc4.md  finops_sercurity_doc3.md
containment-lambda/: CONTAINMENT_PLAN.md  pyproject.toml  requirements-dev.txt
containment-lambda/src/: executor.py  handler.py
containment-lambda/src/actions/: dry_run.py  rollback.py  stopper.py  suggester.py  tagger.py
containment-lambda/src/audit/: dynamo_cache.py  s3_audit.py
containment-lambda/src/aws/: resource_reader.py  session.py
containment-lambda/src/model/: input.py  output.py
containment-lambda/src/policy/: boundary.py  confidence_guard.py
containment-lambda/test-events/: 01_dry_run_sandbox.json  02_apply_stop_ec2_sandbox.json  03_tag_prod.json  04_apply_blocked_prod_boundary.json  05_low_confidence_forced_dry_run.json  06_denied_approval.json  07_suggest_finance_route.json  README.md
containment-lambda/tests/: test_actions.py  test_audit.py  test_boundary.py
docs/contracts/: ai-api-contract.md  deployment-contract.md  telemetry-contract.md
docs/tf2-finops/: 01_requirements_analysis.md  01_requirements_analysis_vi.md  02_infra_design.md  02_infra_design_vi.md  03_security_design.md  08_adrs.md  (+16 more)
ingestion-lambda/: INGESTION_TO_RAW_PLAN.md  pyproject.toml
ingestion-lambda/src/: __init__.py  config.py  main.py  model.py
ingestion-lambda/src/puller/: __init__.py  cloudtrail.py  costexplorer.py  cur.py  puller.py
ingestion-lambda/src/storage/: s3writer.py
(+11 files in other folders)
