[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "containment-lambda"
version = "1.0.0"
description = "TF2 FinOps Watch — Containment Lambda"
requires-python = ">=3.12"
dependencies = ["boto3>=1.34.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
