[project]
name = "ingestion-lambda"
version = "2.0.0"
description = "AWS Lambda for FinOps data ingestion v2.0 (CUR + Cost Explorer + CloudTrail)"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "aws-lambda-powertools>=2.40.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
